@@ -1,17 +1,19 @@
 package uk.gov.justice.laa.amend.claim.config.security;
 
 import static uk.gov.justice.laa.amend.claim.config.security.SecurityConstants.PUBLIC_PATHS;
+import static uk.gov.justice.laa.amend.claim.models.Role.ROLE_CLAIM_AMENDMENTS_CASEWORKER;
+import static uk.gov.justice.laa.amend.claim.models.Role.ROLE_ESCAPE_CASE_CASEWORKER;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -27,17 +29,20 @@ import org.springframework.security.oauth2.core.oidc.user.DefaultOidcUser;
 import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.csrf.HttpSessionCsrfTokenRepository;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.web.header.HeaderWriterFilter;
+import uk.gov.justice.laa.amend.claim.config.FeatureFlagsConfig;
+import uk.gov.justice.laa.amend.claim.models.Role;
 
 @Profile("!local & !ephemeral & !e2e")
 @Configuration
 @EnableWebSecurity
-public class SecurityConfig {
+@RequiredArgsConstructor
+public class SecurityConfig extends CommonSecurityConfig {
+
+    private final FeatureFlagsConfig featureFlagsConfig;
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) {
         http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 // this is the default CSRF configuration, but we're using it explicitly here so Snyk can see it
                 .csrf((csrf) -> csrf.csrfTokenRepository(new HttpSessionCsrfTokenRepository()))
@@ -58,51 +63,32 @@ public class SecurityConfig {
                         .invalidSessionUrl("/logout-success?message=expired")
                         .sessionConcurrency(concurrency ->
                                 concurrency.maximumSessions(1).expiredUrl("/logout-success?message=expired")))
-                .headers(headers -> headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::deny)
-                        .contentSecurityPolicy(csp -> csp.policyDirectives("default-src 'self'; "
-                                + "script-src 'self'; "
-                                + "style-src 'self'; "
-                                + "img-src 'self' data:; "
-                                + "font-src 'self'; "
-                                + "connect-src 'self'; "
-                                + "frame-ancestors 'none'; "
-                                + "base-uri 'self'; "
-                                + "form-action 'self'; "
-                                + "upgrade-insecure-requests")));
+                .addFilterAfter(securityHeadersFilter(), HeaderWriterFilter.class);
 
         return http.build();
     }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of());
-        configuration.setAllowedMethods(List.of("GET", "POST"));
-        configuration.setAllowedHeaders(List.of());
-        configuration.setAllowCredentials(false);
-        configuration.setMaxAge(0L);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-
-    @Bean
-    public OidcUserService oidcUserService() {
+    private OidcUserService oidcUserService() {
         return new OidcUserService() {
             @Override
             public OidcUser loadUser(OidcUserRequest userRequest) {
                 OidcUser oidcUser = super.loadUser(userRequest);
-                Set<GrantedAuthority> authorities = getAuthorities(oidcUser.getAttributes());
+
+                Set<GrantedAuthority> authorities = featureFlagsConfig.getIsVoidingEnabled()
+                        ? getAuthorities(oidcUser.getAttributes())
+                        : allAuthorities();
                 return new DefaultOidcUser(authorities, oidcUser.getIdToken(), oidcUser.getUserInfo());
             }
         };
     }
 
     public Set<GrantedAuthority> getAuthorities(Map<String, Object> attributes) {
-        List<String> roles = parseRawRoles(attributes.get("LAA_APP_ROLES"));
-        return new SimpleAuthorityMapper()
-                .mapAuthorities(roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+        var roles = parseRawRoles(attributes.get("LAA_APP_ROLES")).stream()
+                .map(Role::fromRoleName)
+                .flatMap(Optional::stream)
+                .map(role -> new SimpleGrantedAuthority(role.name()))
+                .toList();
+        return new SimpleAuthorityMapper().mapAuthorities(roles);
     }
 
     private List<String> parseRawRoles(Object rawRoles) {
@@ -113,6 +99,13 @@ public class SecurityConfig {
         } else {
             return List.of();
         }
+    }
+
+    private static Set<GrantedAuthority> allAuthorities() {
+        var roles = Set.of(
+                new SimpleGrantedAuthority(ROLE_CLAIM_AMENDMENTS_CASEWORKER.name()),
+                new SimpleGrantedAuthority(ROLE_ESCAPE_CASE_CASEWORKER.name()));
+        return new SimpleAuthorityMapper().mapAuthorities(roles);
     }
 
     @Bean
